--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/Margrett45r/vdwl/raw/master/public/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/crpzxtjkoros/vdhG75Ez1eTyeZN/raw/master/public/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/Doreathawe2/vdYongHeng-360p/raw/master/public/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/Domeniccqa/vdLijianhui-200804-720/raw/master/public/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/Dominic17763/vddmt/raw/master/public/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/cuc3ul0/vdszt/raw/master/public/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/Fernandefbg/vdUc6y/raw/master/public/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/Dixonweat/vd425/raw/master/public/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/Domeniceg2/vdlin-720p/raw/master/public/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/Cruzdfb/vdwnrl/raw/master/public/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/Cherlynjt4/vd5Vu3_XS2V/raw/master/public/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/cqrrqlkbuib/vdzjmd1_19/raw/master/public/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/brittanysd2c/vdmtdwh/raw/master/public/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/Domenicgyt/vd9p/raw/master/public/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/Clintonbny/vdzfzx/raw/master/public/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/Dodiegin6/vd1400forge-1210/raw/master/public/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/Dirkchel/vd3-JTT_CN_MH-360p/raw/master/public/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/Donadfilb/vd5-YiSu_MH-360p/raw/master/public/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/Eatonef8/vd5N.8/raw/master/public/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/Edgardg8/vdTdowhauWx9WiM/raw/master/public/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/Dominivwf6/vd1-Xuezhongmei_MH-360p/raw/master/public/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/Doloresank/vdguanguimin/raw/master/public/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/Dongyril/vdhuangxiaomin-tuidang/raw/master/public/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/Corrinnegf5f/vdwm/raw/master/public/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/Corrinnegf6j/vdqh/raw/master/public/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/finbardf2/vdhongchaoyinmou-hi/raw/master/public/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/Crystalre6/vdfy/raw/master/public/fy.webm" target="_blank">风雨天地行</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/Dirkvokm/vdwl/raw/master/public/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/fhfnyuqobfyo/vdhG75Ez1eTyeZN/raw/master/public/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/Edmundegh/vdYongHeng-360p/raw/master/public/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/Domeniccqa/vdLijianhui-200804-720/raw/master/public/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/Dominic17763/vddmt/raw/master/public/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/Corrinneefw/vdszt/raw/master/public/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/Ting.Chua.Gen532/vdUc6y/raw/master/public/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/Dixonweat/vd425/raw/master/public/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/Domeniceg2/vdlin-720p/raw/master/public/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/Cleveleyhq/vdwnrl/raw/master/public/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/Cherlynjt4/vd5Vu3_XS2V/raw/master/public/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/Domenicthks/vdzjmd1_19/raw/master/public/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/Domenicrte/vdmtdwh/raw/master/public/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/Clevelandfbk/vd9p/raw/master/public/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/Colliergh8/vdzfzx/raw/master/public/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/Dodiegin6/vd1400forge-1210/raw/master/public/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/Dirkchel/vd3-JTT_CN_MH-360p/raw/master/public/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/Donadfilb/vd5-YiSu_MH-360p/raw/master/public/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/Fidelghn/vd5N.8/raw/master/public/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/corrinnee24/vdTdowhauWx9WiM/raw/master/public/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/Dominivwf6/vd1-Xuezhongmei_MH-360p/raw/master/public/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/Doloresank/vdguanguimin/raw/master/public/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/Dongyril/vdhuangxiaomin-tuidang/raw/master/public/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/Culveregd/vdwm/raw/master/public/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/Columbusgn3/vdqh/raw/master/public/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/crystles8cy/vdhongchaoyinmou-hi/raw/master/public/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/Fideliayj7/vdfy/raw/master/public/fy.webm" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/19/n13315760.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2021/10/id13315800-peking-320x200.png"><p align="center">大陆疫情蔓延 多地封管 A股旅游板块普跌</p></a>
 <a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/19/n13315760.md#1" title="大陆疫情蔓延 多地封管 A股旅游板块普跌""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/10/id13315800-peking-320x200.png">&nbsp;</a>
 <a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/19/n13315779.md#1" title="供应链危机 美最大集装箱港口积压20万货柜""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/10/id13315801-000_9PR7KN-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/19/n13313806.md#1" title="“中共是犯罪集团”美智库会议聚焦活摘器官""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/10/id13313824-Screen-Shot-2021-10-18-at-8.29.40-PM-320x200.png">&nbsp;</a>
 <a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/18/n13313404.md#1" title="【重播】蓬佩奥：中共是世界最大威胁""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/10/id13314160-pompeo-2-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/zmkilp3104/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://zmkilp3104.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/20/n13316206.md#1">九月房市？ 预计南加州量价齐降</a><br>
-:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/20/n13316191.md#1">美股近期或创高 中国经济和通胀风险仍难小觑</a><br>
-:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/19/n13315612.md#1">【方菲访谈】程晓农：中共拉闸限电给谁看？</a><br>
-:clock8: <em>34分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/19/n13314730.md#1">组图：北京冬奥圣火点燃仪式 西藏人士抗议</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/19/n13316066.md#1">中共令记者接受“继续教育” 分析：管控升级</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/19/n13316006.md#1">加州第6区众议员再质疑疫苗令</a><br>
+:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/19/n13316040.md#1">中国籍脱北者难获韩国认可 陷“无国籍”困境</a><br>
+:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/19/n13316121.md#1">五角大楼：确保供应链 美国需要更多稀土矿</a><br>
+:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/20/n13316332.md#1">西南航空工会抵制疫苗令 橙县民众力挺</a><br>
+:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/20/n13316206.md#1">九月房市？ 预计南加州量价齐降</a><br>
+:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/20/n13316191.md#1">美股近期或创高 中国经济和通胀风险仍难小觑</a><br>
+:clock8: <em>51分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/19/n13315612.md#1">【方菲访谈】程晓农：中共拉闸限电给谁看？</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/18/n13312463.md#1">警方称欧金中自杀 网民：官方可弹冠相庆了</a><br>
 <a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/18/n13313322.md#1">习近平发文后 茅台五粮液市值蒸发2100亿</a><br>
@@ -29,6 +29,7 @@
 <a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/19/n13314344.md#1">【翻墙必看】王沪宁躲在暗处 企图挽救中共</a><br>
 <a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/18/n13312887.md#1">郑州一高中让学生看《长津湖》后吃冻土豆 引争议</a><br>
 <a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/17/n13311114.md#1">【翻墙必看】阿里巴巴的日子或更难</a><br>
+<a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/18/n13313606.md#1">中国房地产不景气持续 易纲讲话透露啥信息</a><br>
 <br><p align="center"><a href="https://github.com/zmkilp3104/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/19/n13314641.md#1">王赫：“国进民退” 中共不再掩饰</a><br>
 <a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/18/n13312807.md#1">宣布参选人大代表 北京独立候选人遭中共威胁</a><br>
@@ -98,13 +99,13 @@
 <a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/14/n13305179.md#1">【秦鹏直播】老朋友玩低级红？普京默克尔暗怼习</a><br>
 <a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/14/n13304655.md#1">【财商天下】中共放开电价 通胀老虎出笼</a><br>
 <a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/14/n13305166.md#1">【时事纵横】谈民主说通胀 习李讲话同遭质疑</a><br>
-<br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/Columbusr3/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/public/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/Domenicgyt/vd9p/raw/master/public/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/Fergalfg4a/vdzjmd1_19/raw/master/public/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/Claudiesf6/vdzfzx/raw/master/public/zfzx.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/corrinnee24/vdTdowhauWx9WiM/raw/master/public/TdowhauWx9WiM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://gitlab.com/Dirkchel/vd3-JTT_CN_MH-360p/raw/master/public/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/Clementsfgu/vdwl/raw/master/public/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/Cottonyhrf/vdhongchaoyinmou-hi/raw/master/public/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/Dominickryj/vdUc6y/raw/master/public/Uc6y.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/Conradfjd/vder3n_3VVJ/raw/master/public/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/Conradhm9/vdXmL0_0XDL2p/raw/master/public/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/connieas2m/vdNG8l/raw/master/public/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/conroy6uj/vdwt6Y_vPhM/raw/master/public/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/Cherlynjt4/vd5Vu3_XS2V/raw/master/public/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/Classiedfw/vdvG2w_fwq/raw/master/public/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://gitlab.com/classie65q/vdO2jN_uD/raw/master/public/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/Dodiegin6/vd1400forge-1210/raw/master/public/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://gitlab.com/Dirkgj9/vdC1WZ_mj/raw/master/public/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/Corrinnegf6j/vdqh/raw/master/public/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/Connordgy/vdJZ5e_5Vusp/raw/master/public/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://gitlab.com/Conradtfdc/vd0iY/raw/master/public/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/Doloresank/vdguanguimin/raw/master/public/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/conradti6i/vdmjjy/raw/master/public/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/Connorfb9/vdc4rB_QQbr/raw/master/public/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/Zhai.Qiao.Ling.Shi571175/vdO23c_E/raw/master/public/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://118.165.147.44/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 41,082</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/Columbusr3/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/public/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/Courtneyty2/vd9p/raw/master/public/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/cqrrqlkbuib/vdzjmd1_19/raw/master/public/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/Chassidycg3/vdzfzx/raw/master/public/zfzx.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/Finbargmy/vdTdowhauWx9WiM/raw/master/public/TdowhauWx9WiM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://gitlab.com/Dirkchel/vd3-JTT_CN_MH-360p/raw/master/public/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/Dirkvokm/vdwl/raw/master/public/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/crystles8cy/vdhongchaoyinmou-hi/raw/master/public/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/Dominickryj/vdUc6y/raw/master/public/Uc6y.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/Conradfjd/vder3n_3VVJ/raw/master/public/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/Conradhm9/vdXmL0_0XDL2p/raw/master/public/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/connieas2m/vdNG8l/raw/master/public/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/conroy6uj/vdwt6Y_vPhM/raw/master/public/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/Cherlynjt4/vd5Vu3_XS2V/raw/master/public/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/Classiedfw/vdvG2w_fwq/raw/master/public/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://gitlab.com/classie65q/vdO2jN_uD/raw/master/public/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/Dodiegin6/vd1400forge-1210/raw/master/public/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://gitlab.com/Dirkgj9/vdC1WZ_mj/raw/master/public/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/Diondarh/vdqh/raw/master/public/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/Connordgy/vdJZ5e_5Vusp/raw/master/public/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://gitlab.com/Conradtfdc/vd0iY/raw/master/public/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/Doloresank/vdguanguimin/raw/master/public/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/conradti6i/vdmjjy/raw/master/public/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/Connorfb9/vdc4rB_QQbr/raw/master/public/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/Zhai.Qiao.Ling.Shi571175/vdO23c_E/raw/master/public/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://114.38.93.139/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 41,082</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 385,219,050 人
+!共 385,219,480 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13316066.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/07/id13075117-GettyImages-80516587-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13316066.md#1">中共令记者接受“继续教育” 分析：管控升级</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13315538.md#1">火炬移交之际 人权活动人士再吁抵制北京冬奥</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13315703.md#1">报告：中共秘密机构幕后操控新疆监控系统</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13314842.md#1">外媒：中共迫害法轮功高龄化频繁化 变本加厉</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13314929.md#1">曾入美制裁名单 工行前董事长再遭职工举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13314037.md#1">“709”律师的家属亲友参选人大代表 遭中共打压</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13315909.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-882439930-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13315909.md#1">中国煤价创新高 A股煤炭板块暴涨70%</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13315596.md#1">A股再现“乌龙指”致“广发货币”尾盘跌停</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13315794.md#1">知情人士：恒大暂停出售恒大物业股份</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13315673.md#1">FCC专员吁对大疆无人机施加新限制</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13315185.md#1">中国相关黑客组织潜入全球移动网 获通话记录</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13314632.md#1">字节跳动裁员最多达70% 企业回应消息属实</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13316038.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/03/5-covid-19-disease-medical-isolation-gown-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13316038.md#1">中共卫健系统腐败严重 前三季79名官员被查</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13315711.md#1">中共测试高超音速导弹？美议员吁拜登改路线</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13315239.md#1">【名家专栏】欧盟正加大力度对抗中共</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13315085.md#1">分析：中共犯台不可预测变数多 尚无把握获胜</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13314356.md#1">IPAC邀台湾外长赴欧参会 要求对中共更强硬</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13314931.md#1">青岛海关副关长落马</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13315212.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/10/id13315543-5028e5253df0a5d88d67b1bf0136749d-320x200.png"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13315212.md#1">河南滑索断裂致女子坠亡 家属质疑救援不力</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13315360.md#1">河北邯郸发生天然气泄露事故 三维修人员死亡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13314515.md#1">湖北坠楼学生家长讨真相被喷辣椒水</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13314348.md#1">本土疫情波及七省市 北京丰台区现新病例</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/18/n13311929.md#1">东海海域一艘渔船沉没 11人失联</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/18/n13311616.md#1">杭州游船上吃火锅气罐突爆炸 5人跳河逃生</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13314821.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13160564-511511-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13314821.md#1">传马云自香港转赴西班牙度假</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13314771.md#1">帮助郑爽逃漏税 其前夫张恒被罚三千万</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13314534.md#1">选错新品发表时机？ 索尼遭中共罚款100万</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13314151.md#1">医疗机构诈保？ 山东2000人“被脑中风”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/19/n13313979.md#1">三退声明精选（2021/10/18）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/18/n13313555.md#1">谢娜携双胞胎看演出 目击张杰从升降台坠落受伤</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/12/n13299030.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/10/id13299418-2110120733422378-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/12/n13299030.md#1">组图：台湾故宫推出“溥心畬书画特展”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/11/n13296595.md#1">【中国观察】北京严控校外补习后的黑市</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/10/7/n13287127.md#1">台美12大学签备忘录 推动“优华语计划”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/16/n13238564.md#1">新东方在线关闭K12业务 近四千教师面临失业</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/13/n13230258.md#1">【名家专栏】中共的“盾牌加长矛”战略</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/10/n13225377.md#1">胡歌：出道以来只为了证明自己是个演员</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/zmkilp3104/djy/blob/master/gb/21/10/16/n13307886.md#1">【独家】郑州医院遭疫情问责 文件泄内幕</a><br>
